feat: Serve files in public folder

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <html>
-  <head>
-    <title>Hello World</title>
-    <link ref="stylesheet" href="styles.css">
-  </head>
-  <body>
-    This is the body of a dummy webpage
-    <h1>And This Is The Heading</h1>
-  </body>
+    <head>
+        <title>Hello World</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        This is the body of a dummy webpage
+        <h1>And This Is The Heading</h1>
+    </body>
 </html>
